
  [ Kiwinote ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - correctly reload appdetailsview after a transaction has run
    - _update_minimal() only gets two args

  [ Gary Lasker ]
  * softwarecenter/backend/channel.py,
    softwarecenter/view/channelpane.py,
    softwarecenter/view/viewswitcher.py:
    - convert channel getters to properties

 -- Gary Lasker <gary.lasker@canonical.com>  Tue, 19 Oct 2010 10:54:33 -0400

software-center (3.1.0) natty; urgency=low

  [ Michael Vogt ]
  * softwarecenter/app.py:
    - use "reopen" instead of "open" in the channels-changed 
      callback to ensure that the various views get the right
      signal. This partly fixes #507836, the exceptions will
      stil be there, but the UI will fully recover
  * softwarecenter/backend/aptd.py:
    - do not emit "channels-changed" while installing a purchase,
      this emited already by the update()
  * softwarecenter/db/application.py:
    - if appdetails finds its pkgname in the pending transactions
      but does not have a apt pkg object yet, this means it got
      installed from a newly enabled source, return the right state
      in this case
  * softwarecenter/view/appdetailsview_gtk.py:
    - remove explicit "progress.set_fraction()" in configure() because
      its not needed (gtk.ProgressBar will DTRT) and also we may get
      "xapian reopen" signals in the middle of a transaction, in this
      case we don't want to reset the progress. 
  * merged lp:~mvo/software-center/zeitgeist-magic-seif that brings
    basic zeitgeist integration. Many thanks to Seif Lotfy for the
    work on this!
  * merged lp:~mmcg069/software-center/usage-bubble, that makes the 
    usage counter look so much nicer :)
  * merged lp:~didrocks/software-center/smarter-app-filtering-level,
    many thanks
  * merged lp:~mmcg069/software-center/selectable-AppDescription,
    many thanks
  * softwarecenter/db/update.py:
    - add mimetypes to the xapian database