@@ -10,8 +10,10 @@ software-center (3.1.1) UNRELEASED; urgency=low
     softwarecenter/view/channelpane.py,
     softwarecenter/view/viewswitcher.py:
     - convert channel getters to properties
+  * softwarecenter/backend/config.py:
+    - don't crash on a corrupted config file (LP: #662414) 
 
- -- Gary Lasker <gary.lasker@canonical.com>  Tue, 19 Oct 2010 10:54:33 -0400
+ -- Gary Lasker <gary.lasker@canonical.com>  Tue, 19 Oct 2010 16:41:40 -0400
 
 software-center (3.1.0) natty; urgency=low
 
